Fix scrollbar on dropdown with edge

--- a/less/bootstrap-theme/dropdowns.less
+++ b/less/bootstrap-theme/dropdowns.less
@@ -111,6 +111,7 @@
         margin-top: 0;
         padding: 3px 16px;
         cursor: default;
+        line-height: floor(@font-size-base * @line-height-base);
     }
 
     > li > a,
